infrastructure/distrojeff-site/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deploy
  namespace: distrojeff
spec:
  replicas: 1
  selector:
    matchLabels:
      app: distrojeff-web
  template:
    metadata:
      labels:
        app: distrojeff-web
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      containers:
      - name: web
        image: jeff7712/distrojeff-site:276c407ef994acd72ceeba6ac505793ffcaf93de
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 101
