infrastructure/distrojeff-site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: distrojeff-site-svc
  namespace: distrojeff
spec:
  selector:
    app: distrojeff-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
