infrastructure/distrojeff-site/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: distrojeff-site-route
  namespace: distrojeff
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`distrojeff.com`)
    kind: Rule
    services:
    - name: distrojeff-site-svc
      port: 80
  tls:
    secretName: distrojeff-tls-secret
